--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     <div class="container">
         <br><br><br><br>
         <div class="row">
-            <div class="col col-6">
+            <div class="col col-1"></div>
+            <div class="col col-5">
                 <div id="random">randomize</div>
             </div>
-            <div class="col col-6">
+            <div class="col col-5">
                 <div id="student">Start</div>
             </div>
+            <div class="col col-1"></div>
         </div>
     </div>
 </body>
