cant complain now

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
     <div class="container">
         <br><br><br><br>
         <div class="row">
-            <div class="col col-1"></div>
-            <div class="col col-5">
-                <div id="random">randomize</div>
+            <div class="col col-4">
+                <button type="button" class="btn btn-dark" id="random">randomize</button>
             </div>
             <div class="col col-5">
-                <div id="student">Start</div>
+                <button type="button" class="btn btn-dark" id="student">Start</button>
             </div>
-            <div class="col col-1"></div>
         </div>
     </div>
 </body>
